generated/LibSLParser.cpp

// Generated from D:/PROjects/libsl-generated-3/grammar/LibSLParser.g4 by ANTLR 4.13.2


#include "LibSLParserListener.h"
#include "LibSLParserVisitor.h"

#include "LibSLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct LibSLParserStaticData final {
  LibSLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  LibSLParserStaticData(const LibSLParserStaticData&) = delete;
  LibSLParserStaticData(LibSLParserStaticData&&) = delete;
  LibSLParserStaticData& operator=(const LibSLParserStaticData&) = delete;
  LibSLParserStaticData& operator=(LibSLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag libslparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<LibSLParserStaticData> libslparserParserStaticData = nullptr;

void libslparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (libslparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(libslparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<LibSLParserStaticData>(
    std::vector<std::string>{
      "file", "globalStatement", "topLevelDecl", "header", "typealiasStatement", 
      "typeDefBlock", "targetType", "typeList", "typeDefBlockStatement", 
      "enumBlock", "enumBlockStatement", "typesSection", "semanticTypeDecl", 
      "simpleSemanticType", "enumSemanticType", "enumSemanticTypeEntry", 
      "annotationDecl", "annotationDeclParams", "annotationDeclParamsPart", 
      "actionDecl", "actionDeclParamList", "actionParameter", "automatonDecl", 
      "constructorVariables", "automatonStatement", "implementedConcepts", 
      "concept_CPP", "automatonStateDecl", "automatonShiftDecl", "functionsList", 
      "functionsListPart", "variableDecl", "nameWithType", "typeExpression", 
      "typeIdentifier", "generic", "typeArgument", "typeIdentifierBounded", 
      "variableAssignment", "assignmentRight", "callAutomatonConstructorWithNamedArgs", 
      "namedArgs", "argPair", "headerWithAsterisk", "constructorDecl", "constructorHeader", 
      "destructorDecl", "destructorHeader", "procDecl", "procHeader", "functionDecl", 
      "functionHeader", "functionDeclArgList", "parameter", "annotationUsage", 
      "functionContract", "functionBody", "functionBodyStatement", "ifStatement", 
      "elseStatement", "actionUsage", "procUsage", "expressionsList", "annotationArgs", 
      "argName", "requiresContract", "ensuresContract", "assignsContract", 
      "expression", "hasAutomatonConcept", "bitShiftOp", "lShift", "rShift", 
      "uRShift", "uLShift", "expressionAtomic", "primitiveLiteral", "qualifiedAccess", 
      "simpleCall", "identifierList", "arrayLiteral", "periodSeparatedFullName", 
      "integerNumber", "floatNumber", "suffix", "typeConstraint", "whereConstraints", 
      "genericBound", "typeIdentifierName"
    },
    std::vector<std::string>{
      "", "';'", "'='", "'=='", "'{'", "'}'", "'('", "')'", "'['", "']'", 
      "'.'", "':'", "','", "'->'", "'<'", "'>'", "'*'", "'/'", "'%'", "'+'", 
      "'-'", "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", "'%='", "'!'", 
      "'!='", "'<='", "'>='", "'&'", "'&&'", "'|'", "'||'", "'^'", "'~'", 
      "'&='", "'|='", "'^='", "'>>='", "'<<='", "'''", "'`'", "", "", "'import'", 
      "'include'", "'libsl'", "'library'", "'version'", "'language'", "'url'", 
      "'typealias'", "'type'", "'types'", "'enum'", "'annotation'", "'automaton'", 
      "'concept'", "'var'", "'val'", "'initstate'", "'state'", "'finishstate'", 
      "'shift'", "'new'", "'fun'", "'constructor'", "'destructor'", "'proc'", 
      "'@'", "'action'", "'requires'", "'ensures'", "'assigns'", "'true'", 
      "'false'", "'define'", "'if'", "'else'", "'by'", "'is'", "'as'", "'null'", 
      "'in'", "'out'", "'where'", "", "", "", "", "", "", "", "", "", "", 
      "'\\u003F'"
    },
    std::vector<std::string>{
      "", "SEMICOLON", "ASSIGN_OP", "EQ", "L_BRACE", "R_BRACE", "L_BRACKET", 
      "R_BRACKET", "L_SQUARE_BRACKET", "R_SQUARE_BRACKET", "DOT", "COLON", 
      "COMMA", "MINUS_ARROW", "L_ARROW", "R_ARROW", "ASTERISK", "SLASH", 
      "PERCENT", "PLUS", "MINUS", "INCREMENT", "DECREMENT", "PLUS_EQ", "MINUS_EQ", 
      "ASTERISK_EQ", "SLASH_EQ", "PERCENT_EQ", "EXCLAMATION", "EXCLAMATION_EQ", 
      "L_ARROW_EQ", "R_ARROW_EQ", "AMPERSAND", "DOUBLE_AMPERSAND", "BIT_OR", 
      "LOGIC_OR", "XOR", "TILDE", "AMPERSAND_EQ", "OR_EQ", "XOR_EQ", "R_SHIFT_EQ", 
      "L_SHIFT_EQ", "APOSTROPHE", "BACK_QOUTE", "ImportStatement", "IncludeStatement", 
      "IMPORT", "INCLUDE", "LIBSL", "LIBRARY", "VERSION", "LANGUAGE", "URL", 
      "TYPEALIAS", "TYPE", "TYPES", "ENUM", "ANNOTATION", "AUTOMATON", "CONCEPT_CPP", 
      "VAR", "VAL", "INITSTATE", "STATE", "FINISHSTATE", "SHIFT", "NEW", 
      "FUN", "CONSTRUCTOR", "DESTRUCTOR", "PROC", "AT", "ACTION", "REQUIRES", 
      "ENSURES", "ASSIGNS", "TRUE", "FALSE", "DEFINE", "IF", "ELSE", "BY", 
      "IS", "AS", "NULL_CPP", "IN", "OUT", "WHERE", "IntegerLiteral", "FloatingPointLiteral", 
      "Identifier", "DoubleQuotedString", "CHARACTER", "Digit", "WS", "BR", 
      "COMMENT", "LINE_COMMENT", "UNBOUNDED"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  libslparserParserStaticData = std::move(staticData);
}

}

LibSLParser::LibSLParser(TokenStream *input) : LibSLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

LibSLParser::LibSLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  LibSLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *libslparserParserStaticData->atn, libslparserParserStaticData->decisionToDFA, libslparserParserStaticData->sharedContextCache, options);
}

LibSLParser::~LibSLParser() {
  delete _interpreter;
}

const atn::ATN& LibSLParser::getATN() const {
  return *libslparserParserStaticData->atn;
}

std::string LibSLParser::getGrammarFileName() const {
  return "LibSLParser.g4";
}

const std::vector<std::string>& LibSLParser::getRuleNames() const {
  return libslparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& LibSLParser::getVocabulary() const {
  return libslparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView LibSLParser::getSerializedATN() const {
  return libslparserParserStaticData->serializedATN;
}


//----------------- FileContext ------------------------------------------------------------------

LibSLParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LibSLParser::FileContext::EOF() {
  return getToken(LibSLParser::EOF, 0);
}

LibSLParser::HeaderContext* LibSLParser::FileContext::header() {
  return getRuleContext<LibSLParser::HeaderContext>(0);
}

std::vector<LibSLParser::GlobalStatementContext *> LibSLParser::FileContext::globalStatement() {
  return getRuleContexts<LibSLParser::GlobalStatementContext>();
}

LibSLParser::GlobalStatementContext* LibSLParser::FileContext::globalStatement(size_t i) {
  return getRuleContext<LibSLParser::GlobalStatementContext>(i);
}


size_t LibSLParser::FileContext::getRuleIndex() const {
  return LibSLParser::RuleFile;
}

void LibSLParser::FileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LibSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFile(this);
}

void LibSLParser::FileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LibSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFile(this);
}


std::any LibSLParser::FileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LibSLParserVisitor*>(visitor))
    return parserVisitor->visitFile(this);
  else
    return visitor->visitChildren(this);
}

LibSLParser::FileContext* LibSLParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, LibSLParser::RuleFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(179);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LibSLParser::LIBSL) {
      setState(178);
      header();
    }
    setState(184);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((((_la - 45) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 45)) & 70386066882051) != 0)) {
      setState(181);
      globalStatement();
      setState(186);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(187);
    match(LibSLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobalStatementContext ------------------------------------------------------------------

LibSLParser::GlobalStatementContext::GlobalStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LibSLParser::GlobalStatementContext::ImportStatement() {
  return getToken(LibSLParser::ImportStatement, 0);
}

tree::TerminalNode* LibSLParser::GlobalStatementContext::IncludeStatement() {
  return getToken(LibSLParser::IncludeStatement, 0);
}

LibSLParser::TypesSectionContext* LibSLParser::GlobalStatementContext::typesSection() {
  return getRuleContext<LibSLParser::TypesSectionContext>(0);
}

LibSLParser::TypealiasStatementContext* LibSLParser::GlobalStatementContext::typealiasStatement() {
  return getRuleContext<LibSLParser::TypealiasStatementContext>(0);
}

LibSLParser::TypeDefBlockContext* LibSLParser::GlobalStatementContext::typeDefBlock() {
  return getRuleContext<LibSLParser::TypeDefBlockContext>(0);
}

LibSLParser::EnumBlockContext* LibSLParser::GlobalStatementContext::enumBlock() {
  return getRuleContext<LibSLParser::EnumBlockContext>(0);
}

LibSLParser::AnnotationDeclContext* LibSLParser::GlobalStatementContext::annotationDecl() {
  return getRuleContext<LibSLParser::AnnotationDeclContext>(0);
}

LibSLParser::ActionDeclContext* LibSLParser::GlobalStatementContext::actionDecl() {
  return getRuleContext<LibSLParser::ActionDeclContext>(0);
}

LibSLParser::TopLevelDeclContext* LibSLParser::GlobalStatementContext::topLevelDecl() {
  return getRuleContext<LibSLParser::TopLevelDeclContext>(0);
}


size_t LibSLParser::GlobalStatementContext::getRuleIndex() const {
  return LibSLParser::RuleGlobalStatement;
}

void LibSLParser::GlobalStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LibSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGlobalStatement(this);
}

void LibSLParser::GlobalStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LibSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGlobalStatement(this);
}


std::any LibSLParser::GlobalStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LibSLParserVisitor*>(visitor))
    return parserVisitor->visitGlobalStatement(this);
  else
    return visitor->visitChildren(this);
}

LibSLParser::GlobalStatementContext* LibSLParser::globalStatement() {
  GlobalStatementContext *_localctx = _tracker.createInstance<GlobalStatementContext>(_ctx, getState());
  enterRule(_localctx, 2, LibSLParser::RuleGlobalStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(198);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(189);
      match(LibSLParser::ImportStatement);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(190);
      match(LibSLParser::IncludeStatement);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(191);
      typesSection();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(192);
      typealiasStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(193);
      typeDefBlock();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(194);
      enumBlock();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(195);
      annotationDecl();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(196);
      actionDecl();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(197);
      topLevelDecl();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopLevelDeclContext ------------------------------------------------------------------

LibSLParser::TopLevelDeclContext::TopLevelDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LibSLParser::AutomatonDeclContext* LibSLParser::TopLevelDeclContext::automatonDecl() {
  return getRuleContext<LibSLParser::AutomatonDeclContext>(0);
}

LibSLParser::FunctionDeclContext* LibSLParser::TopLevelDeclContext::functionDecl() {
  return getRuleContext<LibSLParser::FunctionDeclContext>(0);
}

LibSLParser::VariableDeclContext* LibSLParser::TopLevelDeclContext::variableDecl() {
  return getRuleContext<LibSLParser::VariableDeclContext>(0);
}


size_t LibSLParser::TopLevelDeclContext::getRuleIndex() const {
  return LibSLParser::RuleTopLevelDecl;
}

void LibSLParser::TopLevelDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LibSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTopLevelDecl(this);
}

void LibSLParser::TopLevelDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LibSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTopLevelDecl(this);
}


std::any LibSLParser::TopLevelDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LibSLParserVisitor*>(visitor))
    return parserVisitor->visitTopLevelDecl(this);
  else
    return visitor->visitChildren(this);
}

LibSLParser::TopLevelDeclContext* LibSLParser::topLevelDecl() {
  TopLevelDeclContext *_localctx = _tracker.createInstance<TopLevelDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, LibSLParser::RuleTopLevelDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(203);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(200);
      automatonDecl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(201);
      functionDecl();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(202);
      variableDecl();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HeaderContext ------------------------------------------------------------------

LibSLParser::HeaderContext::HeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> LibSLParser::HeaderContext::SEMICOLON() {
  return getTokens(LibSLParser::SEMICOLON);
}

tree::TerminalNode* LibSLParser::HeaderContext::SEMICOLON(size_t i) {
  return getToken(LibSLParser::SEMICOLON, i);
}

tree::TerminalNode* LibSLParser::HeaderContext::LIBSL() {
  return getToken(LibSLParser::LIBSL, 0);
}

tree::TerminalNode* LibSLParser::HeaderContext::LIBRARY() {
  return getToken(LibSLParser::LIBRARY, 0);
}

std::vector<tree::TerminalNode *> LibSLParser::HeaderContext::DoubleQuotedString() {
